# wyrd

./: .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/planning/: architecture.md
src/wyrd/: __init__.py  __main__.py
src/wyrd/cli/: __init__.py
src/wyrd/core/: __init__.py
src/wyrd/core/indexing/: __init__.py  graph.py  metadata.py  vectors.py
src/wyrd/core/ingestion/: __init__.py  chunker.py  embedder.py  epub.py
src/wyrd/core/retrieval/: __init__.py  semantic.py
src/wyrd/core/synthesis/: __init__.py  llm_summarizer.py  synthesizer.py
src/wyrd/core/topics/: __init__.py  extractor.py  registry.py
src/wyrd/curation/: __init__.py  importer.py  models.py  validator.py
src/wyrd/mcp_server/: __init__.py  server.py
src/wyrd/mcp_server/tools/: __init__.py
tests/: __init__.py  conftest.py  test_cli.py  test_curation.py  test_graph.py  test_indexing.py  test_ingestion.py  test_mcp_server.py  test_retrieval.py  test_synthesis.py  test_topics.py
